# the-Bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
aeon/: __init__.py  config.py  main.py
aeon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aeon/api/routes/: chat.py  events.py  health.py
aeon/db/: schema.sql  session.py
aeon/db/repositories/: traces.py
aeon/models/: __init__.py  chat.py  event.py  trace.py
archive/python-fastapi-spine/aeon/api/: app.py
archive/python-fastapi-spine/tests/: conftest.py  test_chat.py
src/: main.ts
src/api/: app.ts
src/api/routes/: chat.ts  events.ts  health.ts  traces.ts
src/core/: event_append_service.ts  event_integrity.ts
src/db/: db.ts  index.ts  migrations.ts  repositories.ts  rollback-migrations.ts  run-migrations.ts  schema.sql  schema.ts
src/llm/: fetch-with-timeout.ts  json-utils.ts  llm-errors.ts  llm-provider.ts  llm-router.ts
src/llm/prompts/: planner.prompt.ts
src/llm/providers/: gemini.provider.ts  groq.provider.ts  ollama.provider.ts  openrouter.provider.ts
src/models/: chat.model.ts  event.model.ts  plan.model.ts  trace.model.ts
src/planner/: outcome-predictor.service.ts  planner-output-parser.ts  planner.service.ts
src/schemas/: index.ts  plan.schema.ts
tests/: test_client.py  test_events.py  test_traces.py
tests/chat/: chat-planner.test.ts
tests/llm/: llm-router.test.ts
tests/planner/: planner.test.ts
tests/routes/: trace-event-routes.test.ts
(+2 files in other folders)
